placing eyes in right place

--- a/potato.css
+++ b/potato.css
@@ -23,8 +23,10 @@ h1 {
 
 /* Insert CSS for ears below this line*/
 
-/* Insert CSS for eyes below this line*/
-
+#eyes_image{
+top:86px;
+left: 135px;
+}
 /* Insert CSS for mouth below this line*/
 
 /* Insert CSS for nose below this line*/
